# fire-emergency-robot

./: frames.gv
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/second_coursework/: Emergency.h  PatrolAction.h  PatrolActionFeedback.h  PatrolActionGoal.h  PatrolActionResult.h  PatrolFeedback.h  PatrolGoal.h  PatrolResult.h  YOLODetection.h  YOLOLastFrame.h  YOLOLastFrameRequest.h  YOLOLastFrameResponse.h  yolo_detection.h  yolo_detectionRequest.h  yolo_detectionResponse.h
devel/lib/pkgconfig/: second_coursework.pc
devel/lib/python3/dist-packages/second_coursework/msg/: _Emergency.py  _PatrolAction.py  _PatrolActionFeedback.py  _PatrolActionGoal.py  _PatrolActionResult.py  _PatrolFeedback.py  _PatrolGoal.py  _PatrolResult.py  _YOLODetection.py  __init__.py  _yolo_detection.py
devel/lib/python3/dist-packages/second_coursework/srv/: _YOLOLastFrame.py  __init__.py  _yolo_detection.py
devel/lib/second_coursework/: emergency_subscriber.py  main.py
devel/share/roseus/ros/second_coursework/: manifest.l
devel/share/second_coursework/cmake/: second_coursework-msg-extras.cmake  second_coursework-msg-paths.cmake  second_courseworkConfig.cmake
devel/share/second_coursework/msg/: PatrolFeedback.msg  PatrolGoal.msg  PatrolResult.msg
src/second_coursework/: CMakeLists.txt  package.xml
src/second_coursework/action/: Patrol.action
src/second_coursework/config/: coco.data  patrol.rviz
src/second_coursework/launch/: itr_cw.launch
src/second_coursework/msg/: Emergency.msg
src/second_coursework/scripts/: action_server.py  emergency_action_server.py  itr_cw2425CS
src/second_coursework/scripts/states/: __init__.py  detection_state.py  navigation_state.py  patrol_state.py  return_to_base_state.py  room_visit_state.py
src/second_coursework/scripts/utils/: __init__.py  yolo_detector.py
(+53 files in other folders)
